# linux-commands-guide

./: README.md  helper.py  pyproject.toml
guia_linux/: __init__.py  cli.py  utils.py
guia_linux/tools/: __init__.py  awk.py  cat.py  chmod.py  chown.py  crontab.py  curl.py  cut.py  df.py  docker.py  du.py  file_descriptors.py  find.py  firewall_cmd.py  free.py  git.py  grep.py  head.py  htop.py  ifconfig.py  ip.py  iptables.py  jq.py  logs.py  lsblk.py  lsof.py  lxc.py  nc.py  netstat.py  nmap.py  ps.py  regex.py  rsync.py  scp.py  sed.py  shortcuts.py  sort.py  ss.py  ssh.py  system.py  (+12 more)
